traefik/ingress-router.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https-traefik
  namespace: devops
spec:
  redirectScheme:
    scheme: https
    port: "443"
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-http-route
  namespace: devops
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.cmdicncf.org`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: redirect-https-traefik
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-https-route
  namespace: devops
spec:
  entryPoints:
    - websecure
  tls:
    secretName: traefik.cmdicncf.org-tls
  routes:
    - match: Host(`traefik.cmdicncf.org`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
